v1/platform/kubernetes/base/observability/apm-logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-logstash
  namespace: elastic-stack
  labels:
    app.kubernetes.io/name: apm-logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: apm-logstash
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apm-logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.11.3
          ports:
            - name: apm-lumberjack
              containerPort: 5044
            - name: agent-beats
              containerPort: 5045
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: pipeline
              mountPath: /usr/share/logstash/pipeline
              readOnly: true
            - name: settings
              mountPath: /usr/share/logstash/config/logstash.yml
              subPath: logstash.yml
              readOnly: true
            - name: settings
              mountPath: /usr/share/logstash/config/pipelines.yml
              subPath: pipelines.yml
              readOnly: true
            - name: elasticsearch-ca
              mountPath: /usr/share/logstash/config/elasticsearch-ca
              readOnly: true
      volumes:
        - name: pipeline
          configMap:
            name: apm-logstash-pipeline
        - name: settings
          configMap:
            name: apm-logstash-settings
        - name: elasticsearch-ca
          secret:
            secretName: elasticsearch-es-http-certs-public
---
apiVersion: v1
kind: Service
metadata:
  name: apm-logstash
  namespace: elastic-stack
  labels:
    app.kubernetes.io/name: apm-logstash
spec:
  selector:
    app.kubernetes.io/name: apm-logstash
  ports:
    - name: apm-lumberjack
      port: 5044
      targetPort: apm-lumberjack
    - name: agent-beats
      port: 5045
      targetPort: agent-beats
